# Merlin

./: README.md  analysis.sh  main.py  post.ipynb  post_fiducial.ipynb  post_fiducial.py  pyproject.toml  test.py
CloudyFiles/gridrun/: interp6.in~  nebula.linesPredictionCN~  nebula.linesPredictionO~
CloudyFiles/gridrun-09-02-2026/: combine_tables.py  nebula.linesPredictionO  read_nebula_v4.py  run~
MERLIN/: galaxy_visualization.py  movies.py
Output-Files/CC-Fiducial-02_post_analysis/: analysis_data-0.csv
Output-Files/CC-Fiducial-03_post_analysis/: analysis_data.csv  diagnostic.py
Output-Files/CC-Fiducial-list2_post_analysis/: analysis_data.csv  diagnostic.py
Output-Files/analysis/output_00389_analysis/: info_00389.txt  output_00389_field_info.txt  output_00389_field_info_300pc.txt
Output-Files/analysis/output_00389_analysis-april/: output_00389_line_luminosity.txt
analysis/output_00273_analysis/: output_00273_field_info.txt
cleanenv/: pyvenv.cfg
drivers/: analysis.sh  density_pdfs.py  driver.py  init-driver.py  line-ratio-fig.py  main.py  movies.py  plot_density_pdfs.py  plot_density_pdfs_inset.py  post_fiducial.py  yt_initialization.py
drivers/CC-Fiducial-03_post_analysis/: diagnostic.py  plot_masses_sfr.py
drivers/CC-Fiducial-list2_post_analysis/: Braden_lines.py  analysis_data_300pc.csv  diagnostic.py  plot_masses_sfr.py  time-dependence.py
drivers/analysis/output_00273_analysis/: output_00273_field_info.txt  output_00273_line_luminosity.txt  output_00273_sim_info.txt
drivers/analysis/output_00389_analysis/: namelist.txt  output_00389_field_info.txt  output_00389_line_luminosity.txt  output_00389_sim_info.txt
drivers/analysis/output_00389_analysis-april/: header_00389.txt  info_rt_00389.txt
drivers/fs035_ms10_post_analysis/: diagnostic.py  logSFC_1Dprof
merlin/: README  post.py
src/merlin_spectra/: README  __init__.py  emission.py  galaxy_visualization.py  post.py
v1/Reference/Fiducial-Analysis/: diagnostic.py
v1/dev/: cosmo.py  galaxy_visualization.py
v1/v2/drivers/: analysis.sh  main.py
v1/v2/merlin_spectra/: __init__.py  emission.py  galaxy_visualization.py  post.py
